k8s/rorblog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rorblog
spec:
  selector:
    matchLabels:
      run: rorblog
  replicas: 1
  template:
    metadata:
      labels:
        run: rorblog
    spec:
      containers:
        - name: rorblog
          image: rorblog:0.0.3
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: rorblog
  labels:
    run: rorblog
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    run: rorblog
