k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: rorblog.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rorblog
                port:
                  number: 3000
